package com.example.smarthome;

public class SmartHomeException extends RuntimeException {
    public SmartHomeException(String message) {
        super(message);
    }
}